syntax = "proto3";
package mcp.v1;

option go_package = "github.com/grpc-mcp/grpc-mcp/gen/go/mcp/v1";
option java_package = "io.grpcmcp.v1";

// ═══════════════════════════════════════════════════════════════════════════
// COMMON TYPES
// ═══════════════════════════════════════════════════════════════════════════

message Metadata {
  string key = 1;
  string value = 2;
}

message Content {
  oneof content {
    TextContent text = 1;
    ImageContent image = 2;
    AudioContent audio = 3;
    EmbeddedResource resource = 4;
  }
}

message TextContent {
  string text = 1;
}

message ImageContent {
  bytes data = 1;
  string mime_type = 2;
  optional string alt_text = 3;
}

message AudioContent {
  bytes data = 1;
  string mime_type = 2;
  optional string transcript = 3;
}

message EmbeddedResource {
  string uri = 1;
  string mime_type = 2;
  oneof data {
    string text = 3;
    bytes blob = 4;
  }
}

// ═══════════════════════════════════════════════════════════════════════════
// INITIALIZATION
// ═══════════════════════════════════════════════════════════════════════════

message Implementation {
  string name = 1;
  string version = 2;
}

message ClientCapabilities {
  optional RootsCapability roots = 1;
  optional SamplingCapability sampling = 2;
}

message RootsCapability {
  bool list_changed = 1;
}

message SamplingCapability {}

message ServerCapabilities {
  optional ToolsCapability tools = 1;
  optional ResourcesCapability resources = 2;
  optional PromptsCapability prompts = 3;
  optional LoggingCapability logging = 4;
}

message ToolsCapability {
  bool list_changed = 1;
}

message ResourcesCapability {
  bool subscribe = 1;
  bool list_changed = 2;
}

message PromptsCapability {
  bool list_changed = 1;
}

message LoggingCapability {}

message InitializeRequest {
  string protocol_version = 1;
  Implementation client_info = 2;
  ClientCapabilities capabilities = 3;
}

message InitializeResponse {
  string protocol_version = 1;
  Implementation server_info = 2;
  ServerCapabilities capabilities = 3;
  optional string instructions = 4;
}

// ═══════════════════════════════════════════════════════════════════════════
// TOOLS
// ═══════════════════════════════════════════════════════════════════════════

message Tool {
  string name = 1;
  string description = 2;
  // JSON Schema as string - pragmatic choice for compatibility
  string input_schema = 3;
  repeated Metadata annotations = 4;
}

message ListToolsRequest {
  optional string cursor = 1;
}

message ListToolsResponse {
  repeated Tool tools = 1;
  optional string next_cursor = 2;
}

message CallToolRequest {
  string name = 1;
  // Arguments as JSON bytes - allows any structure
  bytes arguments = 2;
}

message CallToolResponse {
  repeated Content content = 1;
  bool is_error = 2;
}

// ═══════════════════════════════════════════════════════════════════════════
// RESOURCES
// ═══════════════════════════════════════════════════════════════════════════

message Resource {
  string uri = 1;
  string name = 2;
  optional string description = 3;
  optional string mime_type = 4;
  repeated Metadata annotations = 5;
}

message ListResourcesRequest {
  optional string cursor = 1;
}

message ListResourcesResponse {
  repeated Resource resources = 1;
  optional string next_cursor = 2;
}

message ReadResourceRequest {
  string uri = 1;
}

message ReadResourceResponse {
  repeated EmbeddedResource contents = 1;
}

message SubscribeResourceRequest {
  string uri = 1;
}

message ResourceUpdate {
  string uri = 1;
  repeated EmbeddedResource contents = 2;
}

// ═══════════════════════════════════════════════════════════════════════════
// PROMPTS
// ═══════════════════════════════════════════════════════════════════════════

message Prompt {
  string name = 1;
  optional string description = 2;
  repeated PromptArgument arguments = 3;
}

message PromptArgument {
  string name = 1;
  optional string description = 2;
  bool required = 3;
}

message ListPromptsRequest {
  optional string cursor = 1;
}

message ListPromptsResponse {
  repeated Prompt prompts = 1;
  optional string next_cursor = 2;
}

message GetPromptRequest {
  string name = 1;
  repeated Metadata arguments = 2;
}

message GetPromptResponse {
  optional string description = 1;
  repeated PromptMessage messages = 2;
}

message PromptMessage {
  Role role = 1;
  repeated Content content = 2;
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_USER = 1;
  ROLE_ASSISTANT = 2;
  ROLE_SYSTEM = 3;
}

// ═══════════════════════════════════════════════════════════════════════════
// SAMPLING (AI Inference)
// ═══════════════════════════════════════════════════════════════════════════

message CreateSampleRequest {
  repeated PromptMessage messages = 1;
  optional ModelPreferences model_preferences = 2;
  optional string system_prompt = 3;
  optional uint32 max_tokens = 4;
  optional float temperature = 5;
  repeated string stop_sequences = 6;
  repeated Metadata metadata = 7;
}

message ModelPreferences {
  repeated ModelHint hints = 1;
  optional float cost_priority = 2;
  optional float speed_priority = 3;
  optional float intelligence_priority = 4;
}

message ModelHint {
  string name = 1;
}

message CreateSampleResponse {
  Role role = 1;
  repeated Content content = 2;
  string model = 3;
  StopReason stop_reason = 4;
  optional Usage usage = 5;
}

enum StopReason {
  STOP_REASON_UNSPECIFIED = 0;
  STOP_REASON_END_TURN = 1;
  STOP_REASON_STOP_SEQUENCE = 2;
  STOP_REASON_MAX_TOKENS = 3;
  STOP_REASON_TOOL_USE = 4;
}

message Usage {
  uint32 input_tokens = 1;
  uint32 output_tokens = 2;
}

// Streaming chunks
message SampleChunk {
  oneof chunk {
    TextDelta text_delta = 1;
    ToolCallDelta tool_call = 2;
    CreateSampleResponse done = 3;
  }
}

message TextDelta {
  string text = 1;
}

message ToolCallDelta {
  string id = 1;
  string name = 2;
  bytes arguments = 3;
}

// ═══════════════════════════════════════════════════════════════════════════
// ROOTS
// ═══════════════════════════════════════════════════════════════════════════

message Root {
  string uri = 1;
  optional string name = 2;
}

message ListRootsRequest {}

message ListRootsResponse {
  repeated Root roots = 1;
}

// ═══════════════════════════════════════════════════════════════════════════
// LOGGING
// ═══════════════════════════════════════════════════════════════════════════

enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  LOG_LEVEL_DEBUG = 1;
  LOG_LEVEL_INFO = 2;
  LOG_LEVEL_NOTICE = 3;
  LOG_LEVEL_WARNING = 4;
  LOG_LEVEL_ERROR = 5;
  LOG_LEVEL_CRITICAL = 6;
  LOG_LEVEL_ALERT = 7;
  LOG_LEVEL_EMERGENCY = 8;
}

message SetLogLevelRequest {
  LogLevel level = 1;
}

message SetLogLevelResponse {}

message LogEntry {
  LogLevel level = 1;
  string logger = 2;
  string message = 3;
  optional bytes data = 4;
}

message SubscribeLogsRequest {
  LogLevel min_level = 1;
}

// ═══════════════════════════════════════════════════════════════════════════
// UTILITY
// ═══════════════════════════════════════════════════════════════════════════

message PingRequest {}
message PingResponse {}

// ═══════════════════════════════════════════════════════════════════════════
// SERVICES
// ═══════════════════════════════════════════════════════════════════════════

// Server-side capabilities (client calls these)
service McpServer {
  // Lifecycle
  rpc Initialize(InitializeRequest) returns (InitializeResponse);
  rpc Ping(PingRequest) returns (PingResponse);

  // Tools
  rpc ListTools(ListToolsRequest) returns (ListToolsResponse);
  rpc CallTool(CallToolRequest) returns (CallToolResponse);

  // Resources
  rpc ListResources(ListResourcesRequest) returns (ListResourcesResponse);
  rpc ReadResource(ReadResourceRequest) returns (ReadResourceResponse);
  rpc SubscribeResource(SubscribeResourceRequest) returns (stream ResourceUpdate);

  // Prompts
  rpc ListPrompts(ListPromptsRequest) returns (ListPromptsResponse);
  rpc GetPrompt(GetPromptRequest) returns (GetPromptResponse);

  // Logging
  rpc SetLogLevel(SetLogLevelRequest) returns (SetLogLevelResponse);
  rpc SubscribeLogs(SubscribeLogsRequest) returns (stream LogEntry);
}

// Client-side capabilities (server calls these for bidirectional communication)
service McpClient {
  // Sampling - server asks client to run inference
  rpc CreateSample(CreateSampleRequest) returns (CreateSampleResponse);
  rpc CreateSampleStream(CreateSampleRequest) returns (stream SampleChunk);

  // Roots
  rpc ListRoots(ListRootsRequest) returns (ListRootsResponse);
}
